Commit after revising index and yml files.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,13 @@ website:
   title: "ISSS608-VAA"
   navbar:
     left:
+    - text: "Hands-on Exercise"
+      menu:
+        - text: "Hands-on Exercise 1"
+          href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.html"
+        - text: "Hands-on Exercise 2"
+          href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.html"
+    right:
       - href: index.qmd
         text: Home
       - about.qmd
@@ -12,8 +19,7 @@ website:
 format:
   html:
     theme:
-      - cosmo
-      - brand
+      - vapor
     css: styles.css
     toc: true
 
