--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,22 @@ website:
           href: "Hands-on_Ex/Hands-on_Ex01/Hands-on_Ex01.html"
         - text: "Hands-on Exercise 2"
           href: "Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.html"
+        - text: "Hands-on Exercise 3"
+          href: "Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.html"
+        - text: "Hands-on Exercise 4"
+          href: "Hands-on_Ex/Hands-on_Ex04/Hands-on_Ex04.html"
+        - text: "Hands-on Exercise 5"
+          href: "Hands-on_Ex/Hands-on_Ex05/Hands-on_Ex05.html"
+        - text: "Hands-on Exercise 6"
+          href: "Hands-on_Ex/Hands-on_Ex06/Hands-on_Ex06.html"
+        - text: "Hands-on Exercise 7"
+          href: "Hands-on_Ex/Hands-on_Ex07/Hands-on_Ex07.html"
+        - text: "Hands-on Exercise 8"
+          href: "Hands-on_Ex/Hands-on_Ex08/Hands-on_Ex08.html"
+        - text: "Hands-on Exercise 9"
+          href: "Hands-on_Ex/Hands-on_Ex09/Hands-on_Ex09.html"
+        - text: "Hands-on Exercise 10"
+          href: "Hands-on_Ex/Hands-on_Ex10/Hands-on_Ex10.html"
     right:
       - href: index.qmd
         text: Home
